--- a/SendToInstapaper/Base.lproj/Main.storyboard
+++ b/SendToInstapaper/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                     <navigationItem key="navigationItem" title="Sent Articles" id="16K-45-VMN">
                         <barButtonItem key="rightBarButtonItem" title="Log in" id="IOt-Uv-lJA">
                             <connections>
-                                <segue destination="eKF-MC-2NO" kind="presentation" id="DfS-iw-y4y"/>
+                                <segue destination="eKF-MC-2NO" kind="show" identifier="ShowLoginSegue" id="DfS-iw-y4y"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -42,31 +42,19 @@
             </objects>
             <point key="canvasLocation" x="530" y="289"/>
         </scene>
-        <!--Login View Controller-->
+        <!--Login View Controller - Login to Instapaper-->
         <scene sceneID="Hus-N5-gVR">
             <objects>
-                <viewController id="eKF-MC-2NO" customClass="LoginViewController" customModule="SendToInstapaper" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Login to Instapaper" id="eKF-MC-2NO" customClass="LoginViewController" customModule="SendToInstapaper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="n6J-D1-zJK"/>
                         <viewControllerLayoutGuide type="bottom" id="cQZ-VO-kZ7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vzd-ub-k5C">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hAy-mk-A9I">
-                                <rect key="frame" x="0.0" y="20" width="480" height="44"/>
-                                <items>
-                                    <navigationItem title="Log in to Instapaper" id="Pkf-H7-tDd">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ZVl-Ke-7nd">
-                                            <connections>
-                                                <action selector="loginCancelled:" destination="eKF-MC-2NO" id="G1h-mt-fjn"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UYc-92-GHA">
+                            <view opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UYc-92-GHA">
                                 <rect key="frame" x="120" y="195" width="240" height="131"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="96x-7c-jtu">
@@ -80,8 +68,9 @@
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y8J-2D-udg">
-                                        <rect key="frame" x="97" y="96" width="43" height="30"/>
+                                        <rect key="frame" x="98" y="96" width="43" height="30"/>
                                         <state key="normal" title="Log in">
+                                            <color key="titleColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -89,17 +78,21 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.97448979591836737" green="0.97448979591836737" blue="0.97448979591836737" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="UYc-92-GHA" secondAttribute="centerX" id="F9C-a4-mSl"/>
                             <constraint firstAttribute="centerY" secondItem="UYc-92-GHA" secondAttribute="centerY" id="NJM-q0-whx"/>
-                            <constraint firstAttribute="centerX" secondItem="hAy-mk-A9I" secondAttribute="centerX" id="jtk-rF-WzA"/>
                         </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="emailField" destination="96x-7c-jtu" id="7rV-op-ZB9"/>
+                        <outlet property="passwordField" destination="74z-FL-CH5" id="XiV-yL-IZW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nsi-Pc-XsL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
