--- a/SendToInstapaper/Base.lproj/Main.storyboard
+++ b/SendToInstapaper/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                             <view opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UYc-92-GHA">
                                 <rect key="frame" x="120" y="195" width="240" height="131"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="96x-7c-jtu">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="96x-7c-jtu">
                                         <rect key="frame" x="10" y="20" width="218" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
@@ -90,8 +90,8 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="emailField" destination="96x-7c-jtu" id="7rV-op-ZB9"/>
                         <outlet property="passwordField" destination="74z-FL-CH5" id="XiV-yL-IZW"/>
+                        <outlet property="usernameField" destination="96x-7c-jtu" id="Wj3-69-5X8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nsi-Pc-XsL" userLabel="First Responder" sceneMemberID="firstResponder"/>
